--- a/src/app/pages/books-and-beyond-page/learning-block/learning-block.component.html
+++ b/src/app/pages/books-and-beyond-page/learning-block/learning-block.component.html
@@ -10,7 +10,8 @@
         *ngFor="let item of bulletPoints"
         class="bullet-points"
         [ngStyle]="{
-          'border-color': getColor()
+          'border-color': getColor(),
+          color: getColor()
         }"
       >
         <p>{{ item }}</p>
