--- a/src/app/pages/books-and-beyond-page/learning-block/learning-block.component.scss
+++ b/src/app/pages/books-and-beyond-page/learning-block/learning-block.component.scss
@@ -31,7 +31,8 @@
   align-items: center;
   text-align: center;
   margin: 0 10px;
-  border: 2px solid;
+  border: 3px solid;
+  padding: 5px;
 
   p {
     text-transform: uppercase;
