--- a/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.html
+++ b/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.html
@@ -1,1 +1,146 @@
-<app-image-section [image]="image"></app-image-section>
+<!-- make a custom image section with routing -->
+<div class="bg-img">
+  <div class="container h100">
+    <div
+      class="d-flex flex-column justify-content-center align-items-center h100"
+    >
+      <h1>{{ title }}</h1>
+      <div class="nav-bar-block">
+        <ul>
+          <li class="white-border">
+            <a
+              [routerLink]="['/events-and-gallery']"
+              [queryParams]="{ type: 'all' }"
+              >All</a
+            >
+          </li>
+          <li class="white-border">
+            <a
+              [routerLink]="['/events-and-gallery']"
+              [queryParams]="{ type: 'co-curricular' }"
+              >Co-curricular</a
+            >
+          </li>
+          <li class="white-border">
+            <a
+              [routerLink]="['/events-and-gallery']"
+              [queryParams]="{ type: 'sports' }"
+              >Sports</a
+            >
+          </li>
+          <li class="white-border">
+            <a
+              [routerLink]="['/events-and-gallery']"
+              [queryParams]="{ type: 'media-coverage' }"
+              >Media Coverage</a
+            >
+          </li>
+          <li>
+            <a
+              [routerLink]="['/events-and-gallery']"
+              [queryParams]="{ type: 'school-gallery' }"
+              >School Gallery</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- display the list for now -->
+<div class="events-section">
+  <div class="container">
+    <ng-container *ngFor="let event of eventsList; let i = index">
+      <div class="row" *ngIf="i % 3 == 0">
+        <!-- left big block -->
+        <div class="col-md-6 left-big-block">
+          <img [src]="eventsList[i].eventImage" alt="eventImage" />
+          <div
+            class="d-flex flex-column justify-content-start left-big-block__desc"
+          >
+            <p>{{ eventsList[i].date }}</p>
+            <h2>{{ eventsList[i].title }}</h2>
+            <p>{{ eventsList[i].description }}</p>
+            <button>View More</button>
+          </div>
+        </div>
+        <!-- right small blocks -->
+        <div class="col-md-6 d-flex flex-column right-big-block">
+          <ng-container *ngIf="eventsList[i + 1] && eventsList[i + 2]">
+            <!-- the first tile -->
+            <div class="right-small-block">
+              <div class="row">
+                <div
+                  class="col-md-6 col-6"
+                  style="padding-left: 20px; padding-right: 0;"
+                >
+                  <div class="desc_section">
+                    <div
+                      class="d-flex flex-column justify-content-start right-small-block__desc"
+                    >
+                      <p>{{ eventsList[i + 1].date }}</p>
+                      <h4>{{ eventsList[i + 1].title }}</h4>
+                      <p>{{ eventsList[i + 1].description }}</p>
+                      <button>View More</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-6 right-aligned-part">
+                  <img [src]="eventsList[i + 1].eventImage" alt="eventImage" />
+                </div>
+              </div>
+            </div>
+            <!-- for the second tile -->
+            <div class="right-small-block">
+              <div class="row">
+                <div
+                  class="col-md-6 col-6"
+                  style="padding-left: 20px; padding-right: 0;"
+                >
+                  <img [src]="eventsList[i + 2].eventImage" alt="eventImage" />
+                </div>
+                <div class="col-md-6 col-6 right-aligned-part">
+                  <div class="desc_section">
+                    <div
+                      class="d-flex flex-column justify-content-start right-small-block__desc"
+                    >
+                      <p>{{ eventsList[i + 2].date }}</p>
+                      <h4>{{ eventsList[i + 2].title }}</h4>
+                      <p>{{ eventsList[i + 2].description }}</p>
+                      <button>View More</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </ng-container>
+          <ng-container *ngIf="eventsList[i + 1] && !eventsList[i + 2]">
+            <!-- the first tile -->
+            <div class="right-small-block">
+              <div class="row">
+                <div
+                  class="col-md-6 col-6"
+                  style="padding-left: 20px; padding-right: 0;"
+                >
+                  <div class="desc_section">
+                    <div
+                      class="d-flex flex-column justify-content-start right-small-block__desc"
+                    >
+                      <p>{{ eventsList[i + 1].date }}</p>
+                      <h4>{{ eventsList[i + 1].title }}</h4>
+                      <p>{{ eventsList[i + 1].description }}</p>
+                      <button>View More</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6 col-6 right-aligned-part">
+                  <img [src]="eventsList[i + 1].eventImage" alt="eventImage" />
+                </div>
+              </div>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+    </ng-container>
+  </div>
+</div>
