--- a/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.html
+++ b/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.html
@@ -47,7 +47,7 @@
     </div>
   </div>
 </div>
-<!-- display the list for now -->
+<!-- display the list here-->
 <div class="events-section">
   <div class="container">
     <ng-container *ngFor="let event of eventsList; let i = index">
@@ -61,7 +61,9 @@
             <p>{{ eventsList[i].date }}</p>
             <h2>{{ eventsList[i].title }}</h2>
             <p>{{ eventsList[i].description }}</p>
-            <button>View More</button>
+            <button (click)="openModal(eventsList[i].imageList)">
+              View More
+            </button>
           </div>
         </div>
         <!-- right small blocks -->
@@ -81,7 +83,9 @@
                       <p>{{ eventsList[i + 1].date }}</p>
                       <h4>{{ eventsList[i + 1].title }}</h4>
                       <p>{{ eventsList[i + 1].description }}</p>
-                      <button>View More</button>
+                      <button (click)="openModal(eventsList[i + 1].imageList)">
+                        View More
+                      </button>
                     </div>
                   </div>
                 </div>
@@ -107,7 +111,9 @@
                       <p>{{ eventsList[i + 2].date }}</p>
                       <h4>{{ eventsList[i + 2].title }}</h4>
                       <p>{{ eventsList[i + 2].description }}</p>
-                      <button>View More</button>
+                      <button (click)="openModal(eventsList[i + 2].imageList)">
+                        View More
+                      </button>
                     </div>
                   </div>
                 </div>
@@ -129,7 +135,9 @@
                       <p>{{ eventsList[i + 1].date }}</p>
                       <h4>{{ eventsList[i + 1].title }}</h4>
                       <p>{{ eventsList[i + 1].description }}</p>
-                      <button>View More</button>
+                      <button (click)="openModal(eventsList[i + 1].imageList)">
+                        View More
+                      </button>
                     </div>
                   </div>
                 </div>
@@ -144,3 +152,35 @@
     </ng-container>
   </div>
 </div>
+
+<app-overlay>
+  <div id="carouselImageList" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div
+        *ngFor="let data of imageListInCarousel; let i = index"
+        class="carousel-item"
+        [ngClass]="i === 0 ? 'active' : ''"
+      >
+        <img [src]="data" alt="eventImageCarousel" />
+      </div>
+    </div>
+    <a
+      class="carousel-control-prev"
+      href="#carouselImageList"
+      role="button"
+      data-slide="prev"
+    >
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a
+      class="carousel-control-next"
+      href="#carouselImageList"
+      role="button"
+      data-slide="next"
+    >
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</app-overlay>
