Updated accordion component as required

--- a/src/app/components/accordion/accordion.component.html
+++ b/src/app/components/accordion/accordion.component.html
@@ -1,20 +1,15 @@
 <div class="accordion-container-block">
-  <div class="container">
+  <div class="container" *ngFor="let data of accordionData">
     <div class="accordion" id="accordionContainer">
-      <div class="card" *ngFor="let data of accordionData">
-        <div class="card-header" [id]="'heading' + data.id">
-          <h2 class="mb-0">
-            <button
-              class="btn btn-link"
-              type="button"
-              data-toggle="collapse"
+      <div class="card">
+        <div class="card-header" [id]="'heading' + data.id" >
+          <h5 class="mb-0">
+            <b>  {{ data.header }}</b>
+            <a class="arrow"  role="button"><i data-toggle="collapse"
               [attr.data-target]="'#collapse' + data.id"
               aria-expanded="true"
-              [attr.aria-controls]="'collapse' + data.id"
-            >
-              {{ data.header }}
-            </button>
-          </h2>
+              [attr.aria-controls]="'collapse' + data.id" class="fa fa-chevron-right"></i></a>
+          </h5>
         </div>
 
         <div [id]="'collapse' + data.id" class="collapse">
