--- a/src/app/components/accordion/accordion.component.scss
+++ b/src/app/components/accordion/accordion.component.scss
@@ -3,3 +3,22 @@
   padding: 3em 0;
   background: #fff;
 }
+
+.card{
+  margin-bottom: 1%;
+}
+
+.card-body{
+  border-top: 10px solid crimson;
+}
+
+.card-header{
+  color: white;
+  background-color: grey;
+}
+
+.arrow{
+  float: right; 
+  color: white;
+  font-size: 15px;
+}
