Added PNG's to footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,8 @@
 <div class="footerNew">
   <div class="container">
-    <div class="row align-items-center footerNew-top-section">
-      <div class="col-lg-4 col-md-12">
+    <div class="row align-items-center justify-content-center footerNew-top-section">
+      <div class="boatImage"></div>
+      <div class="col-4">
         <h3>Newsletter</h3>
         <div class="input-group">
           <input
@@ -17,13 +18,14 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6 col-6 text-center img-section">
+      <div class="col-2 text-center img-section">
         <img src="assets/img/logo.png" alt="logo" class="logo-img-footer" />
       </div>
-      <div class="col-lg-4 col-md-6 col-6 text-right text-section">
+      <div class="col-3 text-right text-section">
         <h3>Parents Corner</h3>
         <p>VISIT NOW &#8594;</p>
       </div>
+      <div class="planetImage"></div>
     </div>
 
     <div class="footerNew-secondary-nav">
