Modified all About Us Pages

--- a/src/app/pages/about-us-page/about-us-page.component.html
+++ b/src/app/pages/about-us-page/about-us-page.component.html
@@ -1,4 +1,4 @@
-<app-image-section [image]="image"></app-image-section>
+<app-image-card-section [image]="image" [title]="title" [text]="text"></app-image-card-section>
 <div class="relative">
   <div id="nav-block">
     <div id="nav-up-rectangle">
