--- a/src/app/pages/about-us-page/leadership/leadership.component.html
+++ b/src/app/pages/about-us-page/leadership/leadership.component.html
@@ -19,3 +19,11 @@
     </div>
   </div>
 </div>
+
+
+<app-image-right-text-info-block
+  [title1]="'Lorem Ipsum'"
+  [title2]="'LOREM IPSUM'"
+  [imgSrc]="'/assets/img/girl-book.png'"
+  [text]="text"
+></app-image-right-text-info-block>
