--- a/src/app/pages/about-us-page/about-us/about-us.component.scss
+++ b/src/app/pages/about-us-page/about-us/about-us.component.scss
@@ -4,10 +4,24 @@
   width: 100%;
   padding: 3em 0;
   background: #fff;
+
+  .rocketImage {
+    background: url("/assets/img/bg-widget-5.png") no-repeat;
+    width: 83px;
+    height: 90px;
+    position: absolute;
+    left: 20%;
+  }
+
+}
+
+.TEXT{
+  font-family: 'Nunito', sans-serif;
 }
 
 .glance-item {
   width: 70%;
+  font-family: "Nunito", sans-serif;
   text-align: center;
   border: 1px solid;
   padding-top: 1em;
@@ -17,4 +31,5 @@
     color: $button-primary;
     margin-bottom: 0;
   }
+
 }
