--- a/src/app/pages/admissions-page/admissions-page.component.html
+++ b/src/app/pages/admissions-page/admissions-page.component.html
@@ -24,3 +24,190 @@
     ></app-admission-step>
   </div>
 </div>
+<div class="admission-applications">
+  <div class="application-title">
+    <br>
+    <h5>2020-21 Application</h5>
+    <h2>Dates</h2>
+    <hr style="width: 60px;margin: auto;border: 1px solid white;">
+    <br>
+  </div>
+
+  <div class="mx-auto" style="width: 60%;">
+    <!--Row 1-->
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           <a><h6 style="font-weight: 900;">Application Process</h6></a>
+            <span>For 2020-2021 Candidates</span> <br><br>
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           <a><h6 style="font-weight: 900;">Early Decision Applicants</h6></a>
+           <span>Apply by 2 September 2019 and get decision by 31 December 2019</span>
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           <a><h6 style="font-weight: 900;">Application Process</h6></a>
+           <span>Apply by 31 December 2019 and get decision by 31 March 2020</span>
+         </div> 
+        </div>
+      </div>
+
+    </div>
+
+    <!--Row 2-->
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           Step-1: Initial Application
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           lorem ipsum
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+          lorem ipsum
+         </div> 
+        </div>
+      </div>
+
+    </div>
+
+    <!--Row 3-->
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           Step-2: Admission Staff Interview
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           lorem ipsum
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+          lorem ipsum
+         </div> 
+        </div>
+      </div>
+
+    </div>
+
+    <!--Row 4-->
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           Step-3: Full Application and Testing
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           lorem ipsum
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+          lorem ipsum
+         </div> 
+        </div>
+      </div>
+
+    </div>
+
+    <!--Row 5-->
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           Step-4: Faculty Interviews
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           lorem ipsum
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+          lorem ipsum
+         </div> 
+        </div>
+      </div>
+
+    </div>
+
+    <!--Row 5-->
+    <div class="row">
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           Acceptance Notifications
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+           lorem ipsum
+         </div>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="card">
+         <div class="card-body">
+          lorem ipsum
+         </div> 
+        </div>
+      </div>
+
+    </div><br>
+  </div>
+
+  <div class="container text-center">
+    <button type="button" class="btn">Send an Inquiry</button>
+  </div><br>
+
+</div>
