added routes for admission page and history page

--- a/src/app/pages/home-page/home-intro-section/home-intro-section.component.html
+++ b/src/app/pages/home-page/home-intro-section/home-intro-section.component.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="sw_items">
         <div class="sw_item sw_item1">
-          <a href="/#"
+          <a href="/about-us/history"
             ><figure><img src="/assets/img/home-intro-img-1.png" /></figure>
             <p>
               Our<br />
@@ -38,10 +38,9 @@
           >
         </div>
         <div class="sw_item sw_item4">
-          <a href="/#"
+          <a href="/admissions"
             ><figure><img src="/assets/img/home-intro-img-4.png" /></figure>
-            <p>Admission</p></a
-          >
+            <p>Admission</p></a>
         </div>
       </div>
     </div>
