--- a/src/app/pages/schedule-tour-page/location-explore/location-explore.component.html
+++ b/src/app/pages/schedule-tour-page/location-explore/location-explore.component.html
@@ -34,7 +34,9 @@
                   <span class="mr-1"><i class="fa fa-envelope"></i></span
                   >{{ item.email }}
                 </p>
-              </div>
+              </div><br>
+
+               <button class="btn">Schedule a tour</button>
             </div>
           </div>
         </ngx-slick-carousel>
