--- a/src/app/pages/schedule-tour-page/location-explore/location-explore.component.scss
+++ b/src/app/pages/schedule-tour-page/location-explore/location-explore.component.scss
@@ -12,6 +12,13 @@
   margin: 0 0 2em;
 }
 
+.btn{
+  color: white;
+  background-color: #363434;
+  border: none;
+  border-radius: 0%;
+}
+
 ::ng-deep .nav-btn {
   height: 41px !important;
   width: 41px !important;
