Created Shoonya Page

--- a/src/app/pages/shoonya-page/shoonya-page.component.html
+++ b/src/app/pages/shoonya-page/shoonya-page.component.html
@@ -1,1 +1,75 @@
-<p>shoonya-page works!</p>
+<div class="bg-img">
+    <div class="container h100">
+      <div class="d-flex flex-column text-center justify-content-center align-items-center h100">
+        <h1>SHOONYA</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        </p>
+      </div>
+    </div>
+</div>
+
+<div class="shoonya-content">
+    <div class="title_sec">
+        <h2> LOREM IPSUM DOLOR SIT AMET</h2>
+    </div>
+    <div class="d-flex flex-column text-left justify-content-center align-items-center h100">
+        <div class="container row mb-4">
+        <div>
+         <div class="circle justify-content-center  align-items-center "></div>
+        </div>
+        <div class="content col-10 pt-2">
+            <h4>LOREM IPSUM DOLOR SIT</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+            </p>
+        </div>
+        </div>
+        <div class="container row mb-4">
+            <div>
+             <div class="circle justify-content-center  align-items-center "></div>
+            </div>
+            <div class="content col-10 pt-2">
+                <h4>LOREM IPSUM DOLOR SIT</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                </p>
+            </div>
+            </div>
+            <div class="container row mb-4">
+                <div>
+                 <div class="circle justify-content-center  align-items-center "></div>
+                </div>
+                <div class="content col-10 pt-2">
+                    <h4>LOREM IPSUM DOLOR SIT</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                        sed do iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    </p>
+                </div>
+                </div>
+                <div class="container row mb-4">
+                    <div>
+                     <div class="circle justify-content-center  align-items-center "></div>
+                    </div>
+                    <div class="content col-10 pt-2">
+                        <h4>LOREM IPSUM DOLOR SIT</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                        </p>
+                    </div>
+                    </div>
+                    
+                    <div class="container row mb-4">
+                        <div>
+                         <div class="circle justify-content-center  align-items-center "></div>
+                        </div>
+                        <div class="content col-10 pt-2">
+                            <h4>LOREM IPSUM DOLOR SIT</h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                                sed do iusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                            </p>
+                        </div>
+                    </div>
+
+    </div>
+</div>
