--- a/src/app/pages/curriculum-page/left-aligned-image/left-aligned-image.component.html
+++ b/src/app/pages/curriculum-page/left-aligned-image/left-aligned-image.component.html
@@ -7,10 +7,8 @@
       <div class="col-md-7">
         <p class="section-title">{{ title }}</p>
         <p>{{ content }}</p>
-        <ul>
-          <li *ngFor="let item of listItems">
-            {{ item }}
-          </li>
+        <ul *ngFor="let item of listItems; let i = index;" >
+           <a href="{{listLinks[i]}}">{{i+1}} . {{ item }} </a>
         </ul>
       </div>
     </div>
