--- a/src/app/pages/curriculum-page/left-aligned-image/left-aligned-image.component.scss
+++ b/src/app/pages/curriculum-page/left-aligned-image/left-aligned-image.component.scss
@@ -23,7 +23,11 @@
   }
 
   .section-title {
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: 800;
   }
+}
+
+a{
+  text-decoration: none;
 }
