--- a/src/app/pages/curriculum-page/right-aligned-image/right-aligned-image.component.html
+++ b/src/app/pages/curriculum-page/right-aligned-image/right-aligned-image.component.html
@@ -4,10 +4,8 @@
       <div class="col-md-7">
         <p class="section-title">{{ title }}</p>
         <p>{{ content }}</p>
-        <ul>
-          <li *ngFor="let item of listItems">
-            {{ item }}
-          </li>
+        <ul *ngFor="let item of listItems; let i = index" >
+          <a href="#">{{i+1}} . {{ item }}</a>
         </ul>
       </div>
       <div class="col-md-5">
