Added redirections for Facebook, Instagram and Youtube Icons

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -130,9 +130,9 @@
 
       <div class="col-md-4 col-4">
         <div class="nright">
-          <a href="#"><i class="fa fa-facebook-official"></i></a>
-          <a href="#"><i class="fa fa-instagram"></i></a>
-          <a href="#"><i class="fa fa-youtube"></i></a>
+          <a href="https://www.facebook.com/smallwonderspanipat/" target="_blank"><i class="fa fa-facebook-official"></i></a>
+          <a href="https://www.instagram.com/small_wonders_panipat/" target="_blank"><i class="fa fa-instagram"></i></a>
+          <a href="https://www.youtube.com/channel/UCUcd6kNDBI7x-yvoYrdnstw" target="_blank"><i class="fa fa-youtube"></i></a>
         </div>
       </div>
     </div>
