added rocket image at background

--- a/src/app/components/more-to-explore/more-to-explore.component.scss
+++ b/src/app/components/more-to-explore/more-to-explore.component.scss
@@ -3,6 +3,14 @@
   padding: 3em 0;
   background: #fff;
 
+  .rocketImage {
+    background: url("/assets/img/bg-widget-5.png") no-repeat;
+    width: 83px;
+    height: 90px;
+    position: absolute;
+    left: 20%;
+  }
+
   img {
     border-radius: 10px;
     width: 100%;
