Added routes from Home Page

--- a/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
+++ b/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="text-center mt-4">
-      <button class="btn mbtn">Know More</button>
+      <button class="btn mbtn" (click)="goToBottom()">Know More</button>
     </div>
   </div>
 </div>
