--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -6,6 +6,7 @@
   [displayList]="curriculumList"
   [titleIntro]="'It’s fun to be here'"
   [title]="'Our Curriculum'"
+  [type]="'curriculum'"
 ></app-home-curriculum-section>
 <app-page-break-section></app-page-break-section>
 <app-branch-info-section></app-branch-info-section>
@@ -14,7 +15,7 @@
   [displayList]="eventList"
   [titleIntro]="'Events and Functions'"
   [title]="'Recent Events'"
-  [type]="'event'"
+  [type]="'events-and-gallery'"
 ></app-home-curriculum-section>
 <app-school-age-break
   [schoolAgeBreakList]="schoolAgeBreakList"
