--- a/src/app/components/image-text-info-block/image-text-info-block.component.html
+++ b/src/app/components/image-text-info-block/image-text-info-block.component.html
@@ -4,7 +4,7 @@
     <div class="row mt-5">
       <div class="col-md-12">
         <img [src]="imgSrc" alt="image-text-info" class="pull-left mr-4 mb-4" />
-        <p class="text-left">{{ text }}</p>
+        <p class="text-left col-md-9">{{ text }}</p>
       </div>
     </div>
   </div>
