--- a/src/app/pages/franchise-page/franchise-page.component.html
+++ b/src/app/pages/franchise-page/franchise-page.component.html
@@ -1,4 +1,4 @@
-<app-background-img-text [title]="title"></app-background-img-text>
+<app-background-img-text [title]="title" [bgImage]="bgImage"></app-background-img-text>
 <app-text-info-block-full
   [title]="sectionHeading1"
   [text]="sectionText1"
