--- a/src/app/pages/schedule-tour-page/schedule-tour-page.component.html
+++ b/src/app/pages/schedule-tour-page/schedule-tour-page.component.html
@@ -1,4 +1,4 @@
-<app-background-img-text [title]="title"></app-background-img-text>
+<app-background-img-text [title]="title" [bgImage]="bgImage"></app-background-img-text>
 <app-location-explore
   [locationList]="locationList"
   [title]="locationExploreTitle"
