--- a/src/app/components/carousel-image-section/carousel-image-section.component.html
+++ b/src/app/components/carousel-image-section/carousel-image-section.component.html
@@ -14,11 +14,18 @@
         <div
           class="d-flex flex-column align-items-center justify-content-center h100"
         >
+          
           <h2>Be different Be a wonderian</h2>
           <h1>
             <span>Great Place for Your</span><span>Child to Grow at</span>
           </h1>
         </div>
+        <img
+        src="/assets/img/climbing_stairs.jpg"
+        alt="arrow-down" style="width: 25%; border: none;"
+        class="climbingStairs"
+        (click)="navigateToHomeIntro()"
+        />
         <img
           src="/assets/img/arrow-down.png"
           alt="arrow-down"
@@ -31,15 +38,19 @@
     <!--Second slide-->
     <div class="carousel-item slide-home-page slide-2">
       <div class="container text-center h100">
-        <div
-          class="d-flex flex-column align-items-start justify-content-center h100"
-        >
+        <div class="d-flex flex-column align-items-start justify-content-center h100">
           <h2>Welcome to Small Wonders</h2>
           <h1>
-            <span>We teach children how to</span
-            ><span>think, not what to think</span>
+            <span>We teach children how to</span>
+            <span>think, not what to think</span>
           </h1>
         </div>
+        <img
+        src="/assets/img/bulb-in-hand.jpg"
+        alt="arrow-down"
+        class="bulb"
+        (click)="navigateToHomeIntro()"
+        />
         <img
           src="/assets/img/arrow-down.png"
           alt="arrow-down"
