--- a/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.scss
+++ b/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.scss
@@ -4,10 +4,12 @@
   width: 100%;
   height: 30em;
   z-index: 0;
-  opacity: 0.6;
+  max-width:100%;
+  max-height:100%;
   position: relative;
-  background: url("/assets/img/school-building.jpg") no-repeat;
-  background-size: cover;
+ background: url("/assets/img/events.jpg") no-repeat;
+ background-position: center;
+ background-size: cover;
 
   h1 {
     font-weight: 700;
