--- a/src/app/pages/activities-page/activities-page.component.html
+++ b/src/app/pages/activities-page/activities-page.component.html
@@ -1,6 +1,7 @@
-<app-background-img-text [title]="title"></app-background-img-text>
+<app-background-img-text [title]="title" [bgImage]="bgImage"></app-background-img-text>
 <!-- router outlet goes here -->
 <router-outlet></router-outlet>
+<app-explore-section></app-explore-section>
 <app-corner-stone></app-corner-stone>
 <app-parents-testimonial
   [testimonialList]="testimonialList"
