Admissions Page Background Image Changed

--- a/src/app/pages/admissions-page/admissions-page.component.html
+++ b/src/app/pages/admissions-page/admissions-page.component.html
@@ -1,4 +1,4 @@
-<app-background-img-text [title]="title"></app-background-img-text>
+<app-background-img-text [title]="title" [bgImage]="bgImage"></app-background-img-text>
 <div class="admission-intro-text">
   <div class="container">
     <div class="row align-items-center">
