--- a/src/app/pages/blog-page/blog-page.component.html
+++ b/src/app/pages/blog-page/blog-page.component.html
@@ -17,7 +17,7 @@
               </div>
               <div class="d-flex flex-column justify-content-start left-big-block__bottomDesc">
                 <p>by AUTHOR | DATE</p>
-                <h2> eventsList[i].title </h2>
+                <h2> Event Title </h2>
                </div>
             </div>
             <div class="d-flex flex-column justify-content-start left-big-block__content">
@@ -69,7 +69,7 @@ sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad mi
                       <img [src]="image" alt="eventImage" />
                       <div class="d-flex flex-column justify-content-start popular-content__desc">
                         <span>by AUTHOR | DATE</span>
-                        <p>eventsList[i].title </p>
+                        <p>Event Title </p>
                        </div>
                     </div>
                 </ng-container>
