Added re-direction links for Samll Wonders School Pages

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -119,11 +119,15 @@
       </div>
       <div class="col-md-4 col-6 text-center">
         <div class="footer-info-bar">
-          <a href=""
-            ><i class="fa fa-facebook-official" aria-hidden="true"></i
-          ></a>
-          <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
-          <a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/smallwonderspanipat/" target="_blank">
+            <i class="fa fa-facebook-official" aria-hidden="true"></i>
+          </a>
+          <a href="https://www.instagram.com/small_wonders_panipat/" target="_blank">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
+          </a>
+          <a href="https://www.youtube.com/channel/UCUcd6kNDBI7x-yvoYrdnstw" target="_blank">
+            <i class="fa fa-youtube" aria-hidden="true"></i>
+          </a>
         </div>
       </div>
       <div class="col-md-4 col-12 text-right footer-bottom-text">
