Home Curriculum section changes

--- a/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.html
+++ b/src/app/pages/home-page/home-curriculum-section/home-curriculum-section.component.html
@@ -23,6 +23,7 @@
               [imgSrc]="item.imgSrc"
               [title]="item.title"
               [content]="item.content"
+              [ageInterval]="item.ageInterval"
             ></app-carousel-info-card>
           </div>
         </ngx-slick-carousel>
