About Us Page added links for Redirection

--- a/src/app/components/more-to-explore/more-to-explore.component.html
+++ b/src/app/components/more-to-explore/more-to-explore.component.html
@@ -4,7 +4,7 @@
     <div class="row mt-5">
       <div *ngFor="let image of imageList" class="col-md-3">
         <img [src]="image.imageUrl" alt="explore-more-image" />
-        <p>{{ image.text }}</p>
+        <a href="{{image.link}}">{{image.text}}</a>
       </div>
     </div>
   </div>
