--- a/src/app/pages/franchise-page/input-form/input-form.component.html
+++ b/src/app/pages/franchise-page/input-form/input-form.component.html
@@ -25,9 +25,19 @@
           </div>
         </div>
       </div>
-      <div class="form-group">
-        <label for="country">Country</label>
-        <input type="text" class="form-control" id="country" />
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+           <label for="city">City</label>
+           <input type="text" class="form-control" id="city" />
+          </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+           <label for="contact">Contact No.</label>
+           <input type="text" class="form-control" id="contact" />
+          </div>
+        </div>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
