--- a/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
+++ b/src/app/pages/home-page/branch-info-section/branch-info-section.component.html
@@ -18,22 +18,13 @@
           <div ngxSlickItem *ngFor="let item of branchList" class="slide">
             <!-- branch info card-->
             <div class="branch-info-card">
-              <a href="/#" class="row"
-                ><figure class="col-lg-4 col-4">
+              <a href="/#" class="row">          
+                <figure class="col-lg-4 col-4">
                   <img [src]="item.imgSrc" />
                 </figure>
                 <div class="col-lg-8 col-8">
                   <p class="branch-info-card-title">{{ item.title }}</p>
                   <p class="subText">{{ item.address }}</p>
-                  <p class="subText">
-                    <strong
-                      >{{ item.subText }}
-                      <i
-                        class="fa fa-long-arrow-right"
-                        *ngIf="item.showArrow"
-                      ></i
-                    ></strong>
-                  </p>
                 </div>
               </a>
             </div>
@@ -42,7 +33,7 @@
       </div>
     </div>
     <div class="text-center mt-4">
-      <button class="btn mbtn" (click)="goToBottom()">Know More</button>
+      <button class="btn mbtn" (click)="goToSchedulePage()">Know More</button>
     </div>
   </div>
 </div>
