Home Page Franchise section routes added

--- a/src/app/pages/home-page/franchise-opportunity/franchise-opportunity.component.html
+++ b/src/app/pages/home-page/franchise-opportunity/franchise-opportunity.component.html
@@ -17,8 +17,8 @@
         <p class="p2">
           Join Small Wonders &amp; Take Advantage Of Our Momentum!
         </p>
-        <button class="btn mbtn">
-          <i class="fa fa-phone"></i> Call Us Today! (+91 1234 567 890)
+        <button class="btn mbtn" (click)="goToFranchise()">
+          <i class="fa fa-phone"></i> Know More
         </button>
       </div>
       <div class="col-sm-12 col-md-5 col-lg-4 franchiseKids">
