Carousel Info Card age interval input added

--- a/src/app/components/carousel-info-card/carousel-info-card.component.html
+++ b/src/app/components/carousel-info-card/carousel-info-card.component.html
@@ -13,7 +13,7 @@
         {{ content }}
       </p>
       <div class="curr-box-desc-footer">
-        <div>Age: <span>2-3 years</span></div>
+        <div>Age: <span>{{ ageInterval }}</span></div>
         <div>Time: <span>9:00-11:00</span></div>
       </div>
     </div>
