Admission Form Added in Admission Page

--- a/src/app/pages/admissions-page/admissions-page.component.html
+++ b/src/app/pages/admissions-page/admissions-page.component.html
@@ -10,6 +10,7 @@
     ></app-admission-step>
   </div>
 </div>
+<admission-input-form></admission-input-form>
 <div class="admission-applications">
   <div class="application-title">
     <br>
