--- a/src/app/components/background-img-text/background-img-text.component.scss
+++ b/src/app/components/background-img-text/background-img-text.component.scss
@@ -1,6 +1,6 @@
 .bg-img {
   width: 100%;
-  height: 30em;
+  height: 50em;
   z-index: -1;
   position: relative;
 
@@ -10,9 +10,96 @@
     color: #ffffff;
     font-family: sans-serif;
     font-size: 3em;
+    margin-block-start: -110px;
   }
 }
 
 .h100 {
   height: 100%;
+
+}
+
+@media only screen and (min-width: 1050px) and (max-width: 1300px) {
+  .bg-img {
+    height: 40em;
+  }
+}
+@media only screen and (min-width: 950px) and (max-width: 1050px) {
+  .bg-img {
+    height: 35em;
+  }
+}
+@media only screen and (min-width: 800px) and (max-width: 950px) {
+  .bg-img {
+    height: 30em;
+  }
+}
+@media only screen and (min-width: 800px) and (max-width: 1200px) {
+  .bg-img {
+    h1 {
+      font-size: 2.5em;
+      margin-block-start: -110px;
+    }
+  }
+}
+@media only screen and (min-width: 520px) and (max-width: 800px) {
+  .bg-img {
+    height: 20em;
+  }
+}
+
+@media only screen and (min-width: 420px) and (max-width: 520px) {
+  .bg-img {
+    height: 16em;
+  }
+}
+
+@media only screen and (min-width: 370px) and (max-width: 420px) {
+  .bg-img {
+    height: 14em;
+  }
+}
+@media only screen and (min-width: 700px) and (max-width: 800px) {
+  .bg-img {
+    h1 {
+      font-size: 2em;
+      margin-block-start: -30px;
+    }
+  }
+}
+@media only screen and (min-width: 650px) and (max-width: 700px) {
+  .bg-img {
+    h1 {
+      font-size: 2em;
+      margin-block-start: -50px;
+    }
+  }
+}
+@media only screen and (min-width: 520px) and (max-width: 650px) {
+  .bg-img {
+    h1 {
+      font-size: 1.5em;
+      margin-block-start: -50px;
+    }
+  }
+}
+
+
+@media only screen and (min-width: 370px) and (max-width: 520px) {
+  .bg-img {
+    h1 {
+      font-size: 1em;
+      margin-block-start: -50px;
+    }
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .bg-img {
+    height: 12em;
+  h1 {
+    font-size: 0.8em;
+    margin-block-start: -50px;
+  }
+  }
 }
