--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,7 @@
 
         <div id="topNavCollapse" class="navbar-collapse collapse">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a
                 [ngClass]="{
                   'active-link': router.url == '/'
@@ -27,7 +27,7 @@
                 <i class="fa fa-home" aria-hidden="true"></i>
               </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a
                 [routerLink]="['/about-us']"
                 [ngClass]="{
@@ -37,7 +37,7 @@
                 >About Us</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a
                 [routerLink]="['/curriculum']"
                 [ngClass]="{
@@ -47,7 +47,7 @@
                 >Curriculum</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a
                 [routerLink]="['/admissions']"
                 [ngClass]="{
@@ -57,7 +57,7 @@
                 >Admissions</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a
                 [routerLink]="['/franchise']"
                 [ngClass]="{
@@ -67,7 +67,7 @@
                 >Franchise</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a
                 [routerLink]="['/activities']"
                 class="nav-link"
@@ -77,7 +77,7 @@
                 >Activities</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a
                 [routerLink]="['/books-and-beyond']"
                 [ngClass]="{
@@ -87,7 +87,7 @@
                 >Books & Beyond</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a
                 [routerLink]="['/events-and-gallery']"
                 [ngClass]="{
@@ -97,7 +97,7 @@
                 >Events & Gallery</a
               >
             </li>
-            <li class="nav-item">
+            <li class="nav-item" data-toggle="collapse" data-target="#topNavCollapse">
               <a [routerLink]="['/']" class="nav-link">Contact Us</a>
             </li>
           </ul>
