made footer and admission page responsive

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -34,7 +34,7 @@
     background: $button-primary;
     color: #fff;
     padding: 0.25em 1.5em;
-    position: relative;
+    position: unset;
     right: 3em;
     z-index: 1000;
   }
@@ -120,10 +120,40 @@
   border-radius: 20px;
 }
 
+@media only screen  and (min-width: 850px) and (max-width: 960px) {
+  .logo-img-footer {
+    width: 100px;
+    margin-block-start: -180px;
+  }
+}
+@media only screen  and (min-width: 750px) and (max-width: 850px) {
+  .logo-img-footer {
+    width: 90px;
+    margin-block-start: -190px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .logo-img-footer {
+    width: 80px;
+    margin-block-start: -220px;
+  }
+}
+
+@media only screen and (max-width: 685px) {
+  .input-group {
+    .form-control,
+    .form-control-plaintext{
+      width: 100%;
+    }
+  }
+}
+
 .footerNew-fourth-nav {
   padding-bottom: 1em;
   margin-top: 1em;
 }
+
 
 @media only screen and (max-width: 960px) {
   .img-section {
