--- a/src/app/pages/admissions-page/admissions-page.component.scss
+++ b/src/app/pages/admissions-page/admissions-page.component.scss
@@ -18,12 +18,12 @@
 
 .application-title{
   text-align: center;
-  
+
   .h2{
     font-weight: 900;
   }
 
-  
+
 }
 
 .card{
@@ -34,6 +34,12 @@
     text-align: center;
     font-size: small;
     font-weight: 700;
+  }
+}
+
+@media only screen and (max-width: 950px) {
+  .card-body{
+    padding: 0px;
   }
 }
 
