Fonts and banners responsive

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -21,6 +21,8 @@
 }
 
 .bottom-nav {
+  padding-right: 0px;
+  padding-left:  0px;
 }
 
 .nleft {
@@ -125,6 +127,7 @@
   .header-logo {
     width: 100%;
     min-width: 100px;
+    opacity: 0.8;
   }
 }
 
