--- a/src/app/pages/home-page/page-break-section/page-break-section.component.html
+++ b/src/app/pages/home-page/page-break-section/page-break-section.component.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div>
       <h2>
-        if you're looking for <strong>a full day program</strong> small wonders
+        If you're looking for <strong>a full day program</strong> small wonders
         is for you
       </h2>
       <h3>
