--- a/src/app/components/carousel-image-section/carousel-image-section.component.scss
+++ b/src/app/components/carousel-image-section/carousel-image-section.component.scss
@@ -7,7 +7,81 @@
 
 .slide-home-page {
   width: 100%;
-  height: 30em;
+}
+
+@media only screen and (min-width: 800px) {
+  .slide-home-page {
+    height: 30em;
+  }
+  h1 {
+    font-size: 3.5em;
+  }
+  h2 {
+    font-size: 3em;
+  }
+}
+
+@media only screen and (min-width: 650px) and (max-width: 1200px) {
+  h1 {
+    font-size: 3em;
+  }
+  h2 {
+    font-size: 2.5em;
+  }
+}
+
+@media only screen and (min-width: 520px) and (max-width: 800px) {
+  .slide-home-page {
+    height: 25em;
+  }
+}
+
+
+@media only screen and (min-width: 520px) and (max-width: 650px) {
+  h1 {
+    font-size: 2.5em;
+  }
+  h2 {
+    font-size: 2em;
+  }
+}
+
+
+@media only screen and (min-width: 370px) and (max-width: 520px) {
+  .slide-home-page {
+    height: 20em;
+  }
+
+  h1 {
+    font-size: 2em;
+  }
+  h2 {
+    font-size: 1.5em;
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .slide-home-page {
+    height: 16em;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 400px) {
+  h1 {
+    font-size: 1.5em;
+  }
+  h2 {
+    font-size: 1em;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  h1 {
+    font-size: 1.3em;
+  }
+  h2 {
+    font-size: 0.8em;
+  }
 }
 
 .slide-1 {
@@ -18,11 +92,9 @@
 .slide-2 {
   background: url("/assets/img/home-blackboard-bg.jpg") no-repeat bottom;
   background-size: cover;
-
-  
 }
 
-.bulb{
+.bulb {
   position: absolute;
   opacity: 0.5;
   bottom: 2%;
@@ -48,11 +120,13 @@
   cursor: pointer;
 }
 
+
 h1 {
   color: $white-primary;
   font-family: "Cabin Sketch", cursive;
-  font-size: 3.5em;
+  //font-size: 3.5em;
   text-shadow: 1px 0 2px black;
+
   span {
     display: block;
   }
@@ -62,7 +136,7 @@ h1 {
   h2 {
     font-family: "Bangers", cursive;
     color: $white-primary;
-    font-size: 3em;
+    //font-size: 3em;
     text-shadow: 2px 0 2px black;
   }
 }
@@ -76,4 +150,6 @@ h1 {
     font-family: Shadows Into Light Two, cursive;
     color: $white-primary;
   }
+
+
 }
