--- a/src/app/components/carousel-info-card-event/carousel-info-card-event.component.scss
+++ b/src/app/components/carousel-info-card-event/carousel-info-card-event.component.scss
@@ -46,8 +46,14 @@
   justify-content: space-between;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and  (max-width: 1000px) {
   .curr-box {
     width: 80%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .curr-box {
+    padding: 0px 0px 0px;
   }
 }
