--- a/src/app/pages/books-and-beyond-page/books-and-beyond-page.component.scss
+++ b/src/app/pages/books-and-beyond-page/books-and-beyond-page.component.scss
@@ -23,3 +23,36 @@
     text-transform: uppercase;
   }
 }
+
+@media only screen and (max-width: 600px) {
+  .day-section, .children-learn-section{
+    padding: 1em 0;
+    .container {
+      padding-right: 0px;
+      padding-left: 0px;
+    }
+  }
+}
+
+
+@media only screen and (min-width: 400px) and (max-width: 600px) {
+  .day-section, .children-learn-section {
+    p {
+      font-size: 1em;
+    }
+    h3 {
+      font-size: 1.5em;
+    }
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .day-section, .children-learn-section {
+    p {
+      font-size: 0.8em;
+    }
+    h3 {
+      font-size: 1.25em;
+    }
+  }
+}
