--- a/src/app/pages/books-and-beyond-page/learning-intro/learning-intro.component.scss
+++ b/src/app/pages/books-and-beyond-page/learning-intro/learning-intro.component.scss
@@ -20,3 +20,38 @@
   width: 80%;
   margin: auto;
 }
+
+@media only screen and (max-width: 600px) {
+  .learning-intro-section {
+    .content-block {
+      width: 100%;
+    }
+    .container {
+      padding-right: 0px;
+      padding-left: 0px;
+    }
+  }
+}
+
+
+@media only screen and (min-width: 400px) and (max-width: 600px) {
+  .learning-intro-section {
+    .content-block, p {
+      font-size: 1em;
+    }
+    .heading, h3 {
+      font-size: 1.5em;
+    }
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .learning-intro-section {
+    .content-block, p {
+      font-size: 0.8em;
+    }
+    .heading, h3 {
+      font-size: 1.25em;
+    }
+  }
+}
