--- a/src/app/pages/curriculum-page/left-aligned-image/left-aligned-image.component.scss
+++ b/src/app/pages/curriculum-page/left-aligned-image/left-aligned-image.component.scss
@@ -31,3 +31,41 @@
 a{
   text-decoration: none;
 }
+
+@media only screen and (max-width: 600px) {
+  .left-aligned-img {
+    p {
+      padding-right: 0px;
+      padding-left: 0px;
+    }
+  }
+}
+
+@media only screen and (min-width: 400px) and (max-width: 600px) {
+  .left-aligned-img {
+    .section-title{
+      font-size: 1.4em;
+    }
+    p {
+      font-size: 1em;
+    }
+  }
+  a{
+    font-size: 1em;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .left-aligned-img {
+    .section-title {
+      font-size: 1.2em;
+    }
+
+    p {
+      font-size: 0.8em;
+    }
+  }
+  a{
+    font-size: 0.8em;
+  }
+}
