--- a/src/app/pages/curriculum-page/right-aligned-image/right-aligned-image.component.scss
+++ b/src/app/pages/curriculum-page/right-aligned-image/right-aligned-image.component.scss
@@ -28,3 +28,44 @@
     color: $button-primary;
   }
 }
+
+
+@media only screen and (max-width: 600px) {
+  .right-aligned-img {
+    p {
+      padding-right: 0px;
+      padding-left: 0px;
+    }
+  }
+}
+
+@media only screen and (min-width: 400px) and (max-width: 600px) {
+  .right-aligned-img {
+    .section-title{
+      font-size: 1.4em;
+    }
+    p {
+      font-size: 1em;
+    }
+  }
+  a{
+    font-size: 1em;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .right-aligned-img {
+    .section-title {
+      font-size: 1.2em;
+    }
+
+    p {
+      font-size: 0.8em;
+    }
+  }
+  a{
+    font-size: 0.8em;
+  }
+}
+
+
