--- a/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.scss
+++ b/src/app/pages/events-and-gallery-page/events-and-gallery-page.component.scss
@@ -4,12 +4,12 @@
   width: 100%;
   height: 30em;
   z-index: 0;
-  max-width:100%;
-  max-height:100%;
+  max-width: 100%;
+  max-height: 100%;
   position: relative;
- background: url("/assets/img/events.jpg") no-repeat;
- background-position: center;
- background-size: cover;
+  background: url("/assets/img/events.jpg") no-repeat;
+  background-position: center;
+  background-size: cover;
 
   h1 {
     font-weight: 700;
@@ -17,6 +17,26 @@
     color: #ffffff;
     font-family: sans-serif;
     font-size: 3em;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 370px) and (max-width: 600px) {
+  .bg-img {
+    height: 25em;
+
+    h1 {
+      font-size: 2em;
+    }
+  }
+}
+
+@media only screen and (max-width: 370px) {
+  .bg-img {
+    height: 20em;
+    h1 {
+      font-size: 1.3em;
+    }
   }
 }
 
@@ -155,8 +175,10 @@
 @media only screen and (max-width: 1000px) {
   .nav-bar-block {
     width: 90%;
+
     ul {
       padding: 3px 6px;
+
       li {
         padding: 0 8px;
         font-size: 0.8em;
@@ -169,6 +191,7 @@
       h4 {
         font-size: 1em;
       }
+
       button {
         font-size: 0.8em;
         width: 80%;
@@ -202,8 +225,10 @@
 @media only screen and (max-width: 750px) {
   .nav-bar-block {
     width: 95%;
+
     ul {
       padding: 2px 2px;
+
       li {
         padding: 0 4px;
         font-size: 0.8em;
@@ -227,13 +252,45 @@
 @media only screen and (max-width: 600px) {
   .nav-bar-block {
     width: 100%;
+
     ul {
       padding: 1px 2px;
+
       li {
         padding: 0 4px;
         font-size: 0.75em;
         text-align: center;
       }
+    }
+  }
+}
+
+
+@media only screen and (max-width: 400px) {
+  .nav-bar-block {
+    width: 100%;
+
+    ul {
+      padding: 0px 2px;
+
+      li {
+        padding: 0 4px;
+        font-size: 0.6em;
+        text-align: center;
+      }
+    }
+  }
+  .right-small-block__desc, .left-small-block__desc {
+    h4 {
+      font-size: 0.8em;
+    }
+
+    p {
+      font-size: 0.65em;
+    }
+
+    button {
+      font-size: 0.65em;
     }
   }
 }
